Including reviewer's comments.