@@ -8,7 +8,7 @@ package edu.ie3.datamodel.io.naming;
 import static edu.ie3.datamodel.utils.CollectionUtils.expandSet;
 import static edu.ie3.datamodel.utils.CollectionUtils.newSet;
 
-import edu.ie3.datamodel.io.factory.input.SwitchInputFactory;
+import edu.ie3.datamodel.models.Entity;
 import edu.ie3.datamodel.models.input.EmInput;
 import edu.ie3.datamodel.models.input.MeasurementUnitInput;
 import edu.ie3.datamodel.models.input.NodeInput;
@@ -41,11 +41,15 @@ import edu.ie3.datamodel.models.result.thermal.ThermalHouseResult;
 import java.util.*;
 import java.util.stream.Stream;
 
-/** Class that contains the field namings for entity classes and some values. */
+/**
+ * Class that contains the field namings for entity classes and some values. There are some method
+ * to register and retrieve mandatory, optional and unsupported fields for entity and value classes.
+ * This is used for validating sources.
+ */
 public final class FieldNaming implements FieldNames {
 
   // field stores
-  private static final Map<Class<?>, List<Set<String>>> mandatoryFields = new HashMap<>();
+  private static final Map<Class<? extends Entity>, Set<String>> mandatoryFields = new HashMap<>();
   private static final Map<Class<?>, Set<String>> optionalFields = new HashMap<>();
   private static final Map<Class<?>, Set<String>> unsupportedFields = new HashMap<>();
 
@@ -56,7 +60,11 @@ public final class FieldNaming implements FieldNames {
    * @return either a set of fields or an empty set
    */
   public static List<Set<String>> getMandatoryFields(Class<?> entityClass) {
-    return mandatoryFields.getOrDefault(entityClass, Collections.emptyList());
+    if (Entity.class.isAssignableFrom(entityClass)) {
+      return List.of(mandatoryFields.getOrDefault(entityClass, Collections.emptySet()));
+    } else {
+      return Collections.emptyList();
+    }
   }
 
   /**
@@ -89,48 +97,49 @@ public final class FieldNaming implements FieldNames {
    * @param optionalFields the optional fields to register
    */
   public static void register(
-      Class<?> entityClass, Set<String> mandatoryFields, Set<String> optionalFields) {
-    FieldNaming.mandatoryFields.putIfAbsent(entityClass, List.of(mandatoryFields));
+      Class<? extends Entity> entityClass,
+      Set<String> mandatoryFields,
+      Set<String> optionalFields) {
+    FieldNaming.mandatoryFields.putIfAbsent(entityClass, mandatoryFields);
     FieldNaming.optionalFields.putIfAbsent(entityClass, optionalFields);
   }
 
   /**
-   * Method to register mandatory and optional fields for a given entity class.
+   * Method to register mandatory fields for a given entity class.
    *
    * <p>NOTE: This method will only add fields, if no fields are registered yet!
    *
    * @param entityClass for which fields should be registered
    * @param mandatoryFields the mandatory fields to register
+   */
+  public static void register(Class<? extends Entity> entityClass, Set<String> mandatoryFields) {
+    FieldNaming.mandatoryFields.putIfAbsent(entityClass, mandatoryFields);
+  }
+
+  /**
+   * Method to register mandatory fields for a given entity class.
+   *
+   * <p>NOTE: This method will only add fields, if no fields are registered yet!
+   *
+   * @param entityClass for which fields should be registered
+   * @param baseSet the base mandatory fields to register
+   * @param additionalFields additional fields to register
+   */
+  private static void registerMandatory(
+      Class<? extends Entity> entityClass, Set<String> baseSet, String... additionalFields) {
+    register(entityClass, expandSet(baseSet, additionalFields));
+  }
+
+  /**
+   * Method to register optional fields for a given entity class.
+   *
+   * <p>NOTE: This method will only add fields, if no fields are registered yet!
+   *
+   * @param entityClass for which fields should be registered
    * @param optionalFields the optional fields to register
    */
-  public static void register(
-      Class<?> entityClass, List<Set<String>> mandatoryFields, Set<String> optionalFields) {
-    FieldNaming.mandatoryFields.putIfAbsent(entityClass, mandatoryFields);
+  public static void registerOptional(Class<?> entityClass, Set<String> optionalFields) {
     FieldNaming.optionalFields.putIfAbsent(entityClass, optionalFields);
-  }
-
-  /**
-   * Method to register mandatory fields for a given entity class.
-   *
-   * <p>NOTE: This method will only add fields, if no fields are registered yet!
-   *
-   * @param entityClass for which fields should be registered
-   * @param mandatoryFields the mandatory fields to register
-   */
-  public static void register(Class<?> entityClass, Set<String> mandatoryFields) {
-    FieldNaming.mandatoryFields.putIfAbsent(entityClass, List.of(mandatoryFields));
-  }
-
-  /**
-   * Method to register mandatory fields for a given entity class.
-   *
-   * <p>NOTE: This method will only add fields, if no fields are registered yet!
-   *
-   * @param entityClass for which fields should be registered
-   * @param mandatoryFields the mandatory fields to register
-   */
-  public static void register(Class<?> entityClass, List<Set<String>> mandatoryFields) {
-    FieldNaming.mandatoryFields.putIfAbsent(entityClass, mandatoryFields);
   }
 
   /**
@@ -145,203 +154,231 @@ public final class FieldNaming implements FieldNames {
     FieldNaming.unsupportedFields.putIfAbsent(entityClass, unsupportedFields);
   }
 
-  // input entities
+  // -=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=
+  // code for registering the fields for known assets
+
+  // basic asset fields
+  private static final Set<String> assetFields = newSet(UUID, ID);
+  private static final Set<String> assetOptionalFields =
+      newSet(OPERATOR, OPERATES_FROM, OPERATES_UNTIL);
+
   static {
-    // basic sets
-    Set<String> uniqueEntity = newSet(UUID);
-    Set<String> asset = expandSet(uniqueEntity, ID);
+    // registering all known fields
+    registerTypeFields();
+    registerGridAssetFields();
+    registerParticipantFields();
+    registerThermalFields();
+    registerGraphicFields();
+    registerResultFields();
 
-    Set<String> assetOptional = newSet(OPERATOR, OPERATES_FROM, OPERATES_UNTIL);
+    // registering em fields
+    registerMandatory(EmInput.class, assetFields, CONTROLLING_EM, CONTROL_STRATEGY);
+    registerOptional(EmInput.class, assetOptionalFields);
+  }
 
-    register(OperatorInput.class, asset);
+  /**
+   * Method for expanding the mandatory fields for entities.
+   *
+   * <p>This overrides the mandatory fields and should only be accessible from this place in order
+   * to prevent errors.
+   *
+   * @param entityClass for which fields should be registered
+   * @param additionalFields new fields that should be added
+   */
+  private static void addMandatory(
+      Class<? extends Entity> entityClass, String... additionalFields) {
+    Set<String> oldSet =
+        FieldNaming.mandatoryFields.getOrDefault(entityClass, Collections.emptySet());
+    FieldNaming.mandatoryFields.put(entityClass, expandSet(oldSet, additionalFields));
+  }
 
-    // grid assets
-    Set<String> connectorBase = expandSet(asset, NODE_A, NODE_B);
-    Set<String> connector = expandSet(connectorBase, PARALLEL_DEVICES);
-    Set<String> transformer2W = expandSet(connector, TAP_POS, AUTO_TAP);
+  /** Method for registering all asset type fields. */
+  private static void registerTypeFields() {
+    register(OperatorInput.class, assetFields);
 
-    register(
-        NodeInput.class,
-        expandSet(asset, V_TARGET, V_RATED, SLACK, GEO_POSITION, VOLT_LVL, SUBNET),
-        assetOptional);
+    registerMandatory(LineTypeInput.class, assetFields, B, G, R, X, I_MAX, V_RATED);
 
-    register(
-        LineInput.class,
-        expandSet(connector, LENGTH, GEO_POSITION, OLM_CHARACTERISTIC, TYPE),
-        assetOptional);
+    Stream.of(Transformer2WTypeInput.class, Transformer3WTypeInput.class)
+        .forEach(
+            c ->
+                registerMandatory(
+                    c,
+                    assetFields,
+                    V_RATED_A,
+                    V_RATED_B,
+                    G_M,
+                    B_M,
+                    D_V,
+                    D_PHI,
+                    TAP_NEUTR,
+                    TAP_MIN,
+                    TAP_MAX));
 
-    register(SwitchInput.class, expandSet(connectorBase, SwitchInputFactory.CLOSED), assetOptional);
+    addMandatory(Transformer2WTypeInput.class, R_SC, X_SC, S_RATED, TAP_SIDE);
 
+    addMandatory(
+        Transformer3WTypeInput.class,
+        S_RATED_A,
+        S_RATED_B,
+        S_RATED_C,
+        V_RATED_C,
+        R_SC_A,
+        R_SC_B,
+        R_SC_C,
+        X_SC_A,
+        X_SC_B,
+        X_SC_C);
+
+    Stream.of(
+            BmTypeInput.class,
+            ChpTypeInput.class,
+            EvTypeInput.class,
+            AcTypeInput.class,
+            HpTypeInput.class,
+            StorageTypeInput.class,
+            WecTypeInput.class)
+        .forEach(c -> registerMandatory(c, assetFields, CAP_EX, OP_EX, S_RATED, COS_PHI_RATED));
+
+    addMandatory(BmTypeInput.class, ACTIVE_POWER_GRADIENT, ETA_CONV);
+
+    addMandatory(ChpTypeInput.class, ETA_EL, ETA_THERMAL, P_THERMAL, P_OWN);
+
+    addMandatory(EvTypeInput.class, E_STORAGE, E_CONS, S_RATED_DC);
+
+    Stream.of(AcTypeInput.class, HpTypeInput.class).forEach(c -> addMandatory(c, P_THERMAL));
+
+    addMandatory(StorageTypeInput.class, E_STORAGE, P_MAX, ACTIVE_POWER_GRADIENT, ETA);
+
+    addMandatory(WecTypeInput.class, CP_CHARACTERISTIC, ETA_CONV, ROTOR_AREA, HUB_HEIGHT);
+  }
+
+  /** Method for registering all grid asset fields. */
+  private static void registerGridAssetFields() {
+
+    addMandatory(NodeInput.class, V_TARGET, V_RATED, SLACK, GEO_POSITION, VOLT_LVL, SUBNET);
+
+    addMandatory(SwitchInput.class, NODE_A, NODE_B, CLOSED);
+
+    addMandatory(LineInput.class, LENGTH, GEO_POSITION, OLM_CHARACTERISTIC);
+
+    Stream.of(LineInput.class, Transformer2WInput.class, Transformer3WInput.class)
+        .forEach(c -> addMandatory(c, NODE_A, NODE_B, PARALLEL_DEVICES, TYPE));
+
+    addMandatory(Transformer2WInput.class, AUTO_TAP, TAP_POS);
+    addMandatory(Transformer3WInput.class, AUTO_TAP, TAP_POS, NODE_C);
+
+    addMandatory(MeasurementUnitInput.class, NODE, V_MAG, V_ANG, P, Q);
+
+    // adding unsupported fields
     registerUnsupported(SwitchInput.class, newSet(PARALLEL_DEVICES));
+  }
 
-    register(Transformer2WInput.class, transformer2W, assetOptional);
+  /** Method for registering all participant fields. */
+  private static void registerParticipantFields() {
+    Stream.of(
+            AcInput.class,
+            HpInput.class,
+            BmInput.class,
+            ChpInput.class,
+            EvcsInput.class,
+            EvInput.class,
+            FixedFeedInInput.class,
+            LoadInput.class,
+            PvInput.class,
+            StorageInput.class,
+            WecInput.class)
+        .forEach(
+            c -> {
+              registerMandatory(c, assetFields, NODE, Q_CHARACTERISTICS, CONTROLLING_EM);
+              registerOptional(c, assetOptionalFields);
+            });
 
-    register(Transformer3WInput.class, expandSet(transformer2W, NODE_C), assetOptional);
+    Stream.of(AcInput.class, HpInput.class).forEach(c -> addMandatory(c, TYPE, THERMAL_BUS));
 
-    register(MeasurementUnitInput.class, expandSet(asset, NODE, V_MAG, V_ANG, P, Q), assetOptional);
+    addMandatory(BmInput.class, TYPE, COST_CONTROLLED, FEED_IN_TARIFF);
 
-    // participant
-    Set<String> participantBase = expandSet(asset, NODE, Q_CHARACTERISTICS, CONTROLLING_EM);
+    addMandatory(ChpInput.class, TYPE, THERMAL_BUS, THERMAL_STORAGE);
 
-    Stream.of(AcInput.class, HpInput.class)
-        .forEach(c -> register(c, expandSet(participantBase, TYPE, THERMAL_BUS), assetOptional));
+    addMandatory(EvcsInput.class, TYPE, CHARGING_POINTS, COS_PHI_RATED, LOCATION_TYPE, V2G_SUPPORT);
 
-    register(
-        BmInput.class,
-        expandSet(participantBase, TYPE, COST_CONTROLLED, FEED_IN_TARIFF),
-        assetOptional);
+    addMandatory(EvInput.class, TYPE, Q_CHARACTERISTICS);
 
-    register(
-        ChpInput.class,
-        expandSet(participantBase, THERMAL_BUS, TYPE, THERMAL_STORAGE),
-        assetOptional);
+    addMandatory(FixedFeedInInput.class, S_RATED, COS_PHI_RATED);
 
-    register(
-        EvcsInput.class,
-        expandSet(
-            participantBase, TYPE, CHARGING_POINTS, COS_PHI_RATED, LOCATION_TYPE, V2G_SUPPORT),
-        assetOptional);
+    addMandatory(LoadInput.class, LOAD_PROFILE, E_CONS_ANNUAL, S_RATED, COS_PHI_RATED);
 
-    register(EvInput.class, expandSet(asset, Q_CHARACTERISTICS, TYPE), assetOptional);
+    addMandatory(
+        PvInput.class, ALBEDO, AZIMUTH, ETA_CONV, ELEVATION_ANGLE, KG, KT, S_RATED, COS_PHI_RATED);
 
-    register(
-        FixedFeedInInput.class, expandSet(participantBase, S_RATED, COS_PHI_RATED), assetOptional);
+    Stream.of(StorageInput.class, WecInput.class).forEach(c -> addMandatory(c, TYPE));
+  }
 
-    register(
-        LoadInput.class,
-        expandSet(participantBase, LOAD_PROFILE, E_CONS_ANNUAL, S_RATED, COS_PHI_RATED),
-        assetOptional);
-
-    register(
-        PvInput.class,
-        expandSet(
-            participantBase,
-            ALBEDO,
-            AZIMUTH,
-            ETA_CONV,
-            ELEVATION_ANGLE,
-            KG,
-            KT,
-            S_RATED,
-            COS_PHI_RATED),
-        assetOptional);
-
-    Stream.of(EvcsInput.class, StorageInput.class, WecInput.class)
-        .forEach(c -> register(c, expandSet(participantBase, TYPE), assetOptional));
-
-    // em
-    register(EmInput.class, expandSet(asset, CONTROLLING_EM, CONTROL_STRATEGY), assetOptional);
-
-    // thermal
-    Set<String> thermalStorageBase =
-        expandSet(
-            asset, STORAGE_VOLUME_LVL, INLET_TEMP, RETURN_TEMP, C, P_THERMAL_MAX, THERMAL_BUS);
-
-    register(ThermalBusInput.class, asset, assetOptional);
-
-    register(
+  /** Method for registering all thermal fields. */
+  private static void registerThermalFields() {
+    Stream.of(
+            ThermalBusInput.class,
+            ThermalHouseInput.class,
+            CylindricalStorageInput.class,
+            DomesticHotWaterStorageInput.class)
+        .forEach(
+            c -> {
+              register(c, assetFields);
+              registerOptional(c, assetOptionalFields);
+            });
+    addMandatory(
         ThermalHouseInput.class,
-        expandSet(
-            asset,
-            ETH_LOSSES,
-            ETH_CAPA,
-            TARGET_TEMPERATURE,
-            UPPER_TEMPERATURE_LIMIT,
-            LOWER_TEMPERATURE_LIMIT,
-            HOUSING_TYPE,
-            NUMBER_INHABITANTS,
-            THERMAL_BUS),
-        assetOptional);
+        ETH_LOSSES,
+        ETH_CAPA,
+        TARGET_TEMPERATURE,
+        UPPER_TEMPERATURE_LIMIT,
+        LOWER_TEMPERATURE_LIMIT,
+        HOUSING_TYPE,
+        NUMBER_INHABITANTS,
+        THERMAL_BUS);
 
     Stream.of(CylindricalStorageInput.class, DomesticHotWaterStorageInput.class)
-        .forEach(c -> register(c, thermalStorageBase, assetOptional));
-
-    // graphic
-    Set<String> graphicBase = expandSet(uniqueEntity, GRAPHIC_LAYER, PATH_LINE_STRING);
-
-    register(NodeGraphicInput.class, expandSet(graphicBase, POINT, NODE));
-
-    register(LineGraphicInput.class, expandSet(graphicBase, LINE));
+        .forEach(
+            c ->
+                addMandatory(
+                    c, STORAGE_VOLUME_LVL, INLET_TEMP, RETURN_TEMP, C, P_THERMAL_MAX, THERMAL_BUS));
   }
 
-  // type input entities
-  static {
-    Set<String> assetType = newSet(UUID, ID);
-
-    // grid assets
-    Set<String> transformerBase =
-        newSet(V_RATED_A, V_RATED_B, G_M, B_M, D_V, D_PHI, TAP_NEUTR, TAP_MIN, TAP_MAX);
-
-    register(LineTypeInput.class, expandSet(assetType, B, G, R, X, I_MAX, V_RATED));
-
-    register(
-        Transformer2WTypeInput.class, expandSet(transformerBase, R_SC, X_SC, S_RATED, TAP_SIDE));
-
-    register(
-        Transformer3WTypeInput.class,
-        expandSet(
-            transformerBase,
-            S_RATED_A,
-            S_RATED_B,
-            S_RATED_C,
-            V_RATED_C,
-            R_SC_A,
-            R_SC_B,
-            R_SC_C,
-            X_SC_A,
-            X_SC_B,
-            X_SC_C));
-
-    // participants
-    Set<String> participantBase = expandSet(assetType, CAP_EX, OP_EX, S_RATED, COS_PHI_RATED);
-
-    register(AcTypeInput.class, expandSet(participantBase, THERMAL_BUS, TYPE));
-
-    register(BmTypeInput.class, expandSet(participantBase, ACTIVE_POWER_GRADIENT, ETA_CONV));
-
-    register(ChpTypeInput.class, expandSet(participantBase, ETA_EL, ETA_THERMAL, P_THERMAL, P_OWN));
-
-    register(EvTypeInput.class, expandSet(participantBase, E_STORAGE, E_CONS, S_RATED_DC));
-
-    register(HpTypeInput.class, expandSet(participantBase, P_THERMAL));
-
-    register(
-        StorageTypeInput.class,
-        expandSet(participantBase, E_STORAGE, P_MAX, ACTIVE_POWER_GRADIENT, ETA));
-
-    register(
-        WecTypeInput.class,
-        expandSet(participantBase, CP_CHARACTERISTIC, ETA_CONV, ROTOR_AREA, HUB_HEIGHT));
+  /** Method for registering all graphic fields. */
+  private static void registerGraphicFields() {
+    Set<String> graphicBase = newSet(UUID, GRAPHIC_LAYER, PATH_LINE_STRING);
+    registerMandatory(NodeGraphicInput.class, graphicBase, POINT, NODE);
+    registerMandatory(LineGraphicInput.class, graphicBase, LINE);
   }
 
-  // result entities
-  static {
+  /** Method for registering all result fields. */
+  private static void registerResultFields() {
     Set<String> result = newSet(TIME, INPUT_MODEL);
 
+    // grid results
     Set<String> connectorResultBase = expandSet(result, IAMAG, IAANG, IBMAG, IBANG);
 
-    register(CongestionResult.class, expandSet(result, TYPE, VALUE, SUBGRID, MIN, MAX));
+    registerMandatory(CongestionResult.class, result, TYPE, VALUE, SUBGRID, MIN, MAX);
 
     register(LineResult.class, connectorResultBase);
 
-    register(Transformer2WResult.class, expandSet(connectorResultBase, TAPPOS));
+    registerMandatory(Transformer2WResult.class, connectorResultBase, TAPPOS);
 
-    register(Transformer3WResult.class, expandSet(connectorResultBase, ICMAG, ICANG, TAPPOS));
+    registerMandatory(Transformer3WResult.class, connectorResultBase, ICMAG, ICANG, TAPPOS);
 
-    register(FlexOptionsResult.class, expandSet(result, P_REF, P_MIN, P_MAX));
+    registerMandatory(FlexOptionsResult.class, result, P_REF, P_MIN, P_MAX);
 
-    register(NodeResult.class, expandSet(result, V_MAG, V_ANG));
+    registerMandatory(NodeResult.class, result, V_MAG, V_ANG);
 
-    register(SwitchResult.class, expandSet(result, CLOSED));
+    registerMandatory(SwitchResult.class, result, CLOSED);
 
     // participant results
     Set<String> participant = expandSet(result, POWER, REACTIVE_POWER);
 
     Stream.of(EvResult.class, StorageResult.class)
-        .forEach(r -> register(r, expandSet(participant, SOC)));
+        .forEach(r -> registerMandatory(r, participant, SOC));
 
     Stream.of(ChpResult.class, HpResult.class)
-        .forEach(r -> register(r, expandSet(participant, Q_DOT)));
+        .forEach(r -> registerMandatory(r, participant, Q_DOT));
 
     Stream.of(
             BmResult.class,
@@ -356,9 +393,9 @@ public final class FieldNaming implements FieldNames {
     // thermal
     Set<String> thermal = expandSet(result, Q_DOT);
 
-    register(ThermalHouseResult.class, expandSet(thermal, INDOOR_TEMPERATURE));
+    registerMandatory(ThermalHouseResult.class, thermal, INDOOR_TEMPERATURE);
 
     Stream.of(CylindricalStorageResult.class, DomesticHotWaterStorageResult.class)
-        .forEach(r -> register(r, expandSet(thermal, ENERGY, FILL_LEVEL)));
+        .forEach(r -> registerMandatory(r, thermal, ENERGY, FILL_LEVEL));
   }
 }
